--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-14  Jakub Steiner <jimmac@ximian.com>
+
+	* */actions/edit-paste*: add content and bent corner.
+	
 2005-10-13  Rodney Dawes  <dobey@novell.com>
 
 	* configure.ac: Reduce intltool requirement to 0.33
