--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-14  Jakub Steiner <jimmac@ximian.com>
+
+	* go-home: new stock home icon
+
 2005-10-14  Rodney Dawes  <dobey@novell.com>
 
 	* acinclude.m4: Add contents of pkg.m4 so we can build on FC4
