--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-16  Rodney Dawes  <dobey@novell.com>
+
+	* index.theme.in: Fix a typo in Directories list for 128x128/emotes
+
 2005-10-15  Rodney Dawes  <dobey@novell.com>
 
 	* configure.ac: Up version to 0.3.0 for release
