--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-17  Jakub Steiner <jimmac@ximian.com>
+
+	* utilities-system-monitor: tweak a little.
+
 2005-10-16  Rodney Dawes  <dobey@novell.com>
 
 	* index.theme.in: Fix a typo in Directories list for 128x128/emotes
