--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-17  Jakub Steiner <jimmac@ximian.com>
+
+	* applications-games: new category
+
 2005-10-17  Rodney  Dawes  <dobey@novell.com>
 
 	* configure.ac: UP version to 0.3.1 for release
