--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-10-17  Jakub Steiner <jimmac@ximian.com>
 
+	* application-games.svg: incorporate Andreas' changes
+
+2005-10-17  Jakub Steiner <jimmac@ximian.com>
+
 	* applications-games: new category
 
 2005-10-17  Rodney  Dawes  <dobey@novell.com>
