--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-10-17  Jakub Steiner <jimmac@ximian.com>
 
+	* drive-removable-media: orange didn't score much. back to grey
+	
+2005-10-17  Jakub Steiner <jimmac@ximian.com>
+
 	* 22x22/apps/computer.png: used the old color for dsome reason
 
 2005-10-17  Jakub Steiner <jimmac@ximian.com>
