--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 Rodney Dawes <dobey@novell.com>
-Jakub Steiner <jimamc@novell.com>
+Jakub Steiner <jimmac@novell.com>
 Tuomas Kuosmanen <tigert@novell.com>
 Garrett LeSage <garrett@novell.com>
 
