--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-17  Rodney Dawes  <dobey@novell.com>
+
+	* AUTHORS: Fix Jakub's e-mail address
+
 2005-10-17  Jakub Steiner <jimmac@ximian.com>
 
 	* drive-removable-media: orange didn't score much. back to grey
