--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-17  Jakub Steiner <jimmac@ximian.com>
+
+	* bookmark-new: action icon for creating bookmarks.
+	
 2005-10-17  Rodney Dawes  <dobey@novell.com>
 
 	* AUTHORS: Fix Jakub's e-mail address
