--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-10-17  Jakub Steiner <jimmac@ximian.com>
 
+	* emblem-favorites: new addition.
+	
+2005-10-17  Jakub Steiner <jimmac@ximian.com>
+
 	* bookmark-new: action icon for creating bookmarks.
 	
 2005-10-17  Rodney Dawes  <dobey@novell.com>
