--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-19  Rodney Dawes  <dobey@novell.com>
+
+	* configure.ac: Up version to 0.3.2.1 to fix an icon
+
 2005-10-19  Jakub Steiner <jimmac@ximian.com>
 
 	* utilities-system-monitor: make it more different to the terminal
