2005-10-24  Jakub Steiner <jimmac@ximian.com>
* internet-web-browser.svg: remove weird PNG references.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-24  Jakub Steiner <jimmac@ximian.com>
+
+	* internet-web-browser.svg: remove weird PNG references.
+
 2005-10-20  Jakub Steiner <jimmac@ximian.com>
 
 	* document-template: removed
