2005-10-24  Jakub Steiner <jimmac@ximian.com>
* go-up, go-down: touched up Andreas' contribution

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-10-24  Jakub Steiner <jimmac@ximian.com>
 
+	* go-up, go-down: touched up Andreas' contribution
+
+2005-10-24  Jakub Steiner <jimmac@ximian.com>
+
 	* internet-web-browser.svg: remove weird PNG references.
 
 2005-10-20  Jakub Steiner <jimmac@ximian.com>
