Add Andreass to AUTHORS

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-10-24  Jakub Steiner <jimmac@ximian.com>
 
+	* AUTHORS: add Andreas
+
+2005-10-24  Jakub Steiner <jimmac@ximian.com>
+
 	* go-up, go-down: touched up Andreas' contribution
 
 2005-10-24  Jakub Steiner <jimmac@ximian.com>
