first, last, top, bottom

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-25  Jakub Steiner <jimmac@ximian.com>
+
+	* go-bottom, go-top, go-first, go-last: more arrows
+	
 2005-10-24  Jakub Steiner <jimmac@ximian.com>
 
 	* AUTHORS: add Andreas
