2005-10-26  Jakub Steiner <jimmac@ximian.com>
* edit-copy: almost no touchups needed on this one. Good job
  Andreas.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-10-26  Jakub Steiner <jimmac@ximian.com>
+
+	* edit-copy: almost no touchups needed on this one. Good job
+	  Andreas.
+
 2005-10-26  Rodney Dawes  <dobey@novell.com>
 
 	* configure.ac: Up version to 0.3.3 for release
