--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-27  Jakub Steiner <jimmac@ximian.com>
+
+	* */actions/Makefile.am: forgot to add edit-copy, thanks Steven!
+	
 2005-10-26  Jakub Steiner <jimmac@ximian.com>
 
 	* edit-copy: almost no touchups needed on this one. Good job
