--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-10-28  Jakub Steiner <jimmac@ximian.com>
 
+	* preferences-desktop.svg: add a little bit of detail
+
+2005-10-28  Jakub Steiner <jimmac@ximian.com>
+
 	* view-refresh: white was invisible, touch up shape a bit.
 
 2005-10-28  Jakub Steiner <jimmac@ximian.com>
