edit cut from garrett

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-29  Jakub Steiner <jimmac@ximian.com>
+
+	* edit-cut: Garrett's on board! Let's celebrate! (tiny touchup)
+
 2005-10-28  Jakub Steiner <jimmac@ximian.com>
 
 	* edit-undo, edit-redo: flip'em
