--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-10-29  Jakub Steiner <jimmac@ximian.com>
 
+	* face-grin: tweaks by Tuomas Kuosmanen
+
+2005-10-29  Jakub Steiner <jimmac@ximian.com>
+
 	* edit-cut: Garrett's on board! Let's celebrate! (tiny touchup)
 
 2005-10-28  Jakub Steiner <jimmac@ximian.com>
