--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-30  Jakub Steiner <jimmac@ximian.com>
+
+	* tab-new: new tab from andreas
+
 2005-10-29  Jakub Steiner <jimmac@ximian.com>
 
 	* face-grin: tweaks by Tuomas Kuosmanen
