--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-31  Jakub Steiner <jimmac@ximian.com>
+
+	* scalable/actions/go-home.svg: tweak the roof a little
+
 2005-10-30  Jakub Steiner <jimmac@ximian.com>
 
 	* tab-new: new tab from andreas
