--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-03  Jakub Steiner <jimmac@ximian.com>
+
+	* audio-input-microphone: testing 1,2,3...
+
 2005-11-01  Jakub Steiner <jimmac@ximian.com>
 
 	* document-save: in the end we go with widely recognised floppy
