--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2005-11-04  Jakub Steiner <jimmac@ximian.com>
 
 	* document-properties: hopefully emblem works
+	* emblem-system: for system files
 	* help-contents: I'd perhaps leave it the same as help-browser,
 	  but...
 
