--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-11-04  Jakub Steiner <jimmac@ximian.com>
 
+	* format-justify-left:
+	* format-justify-right:
+	* format-justify-center:
+	* format-justify-fill: format icons by Andread Nilsson
+
+2005-11-04  Jakub Steiner <jimmac@ximian.com>
+
 	* document-properties: hopefully emblem works
 	* emblem-system: for system files
 	* help-contents: I'd perhaps leave it the same as help-browser,
