--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-11-04  Jakub Steiner <jimmac@ximian.com>
 
+	* dialog-warning: status icon from Andreas
+
+2005-11-04  Jakub Steiner <jimmac@ximian.com>
+
 	* format-justify-left:
 	* format-justify-right:
 	* format-justify-center:
