--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2005-11-04  Jakub Steiner <jimmac@ximian.com>
 
-	* dialog-warning: status icon from Andreas
+	* mail-attachment:
+	* dialog-warning: more icons from Andreas (and Garrett)
 
 2005-11-04  Jakub Steiner <jimmac@ximian.com>
 
