--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-11-04  Jakub Steiner <jimmac@ximian.com>
 
+	* document-open: hopefully this works
+
+2005-11-04  Jakub Steiner <jimmac@ximian.com>
+
 	* format-indent-less:
 	* format-indent-more: based on Andreas' format icons
 
