--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-11-04  Jakub Steiner <jimmac@ximian.com>
 
+	* computer: sync the blues ;)
+	
+2005-11-04  Jakub Steiner <jimmac@ximian.com>
+
 	* document-open: fixes by Lapo Calamandrei
 	
 2005-11-04  Jakub Steiner <jimmac@ximian.com>
