--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-06  Rodney Dawes  <dobey@novell.com>
+
+	* configure.ac: Up version to 0.4.0 for release
+
 2005-11-04  Jakub Steiner <jimmac@ximian.com>
 
 	* computer: sync the blues ;)
