print preview by woodwizzle

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-07  Jakub Steiner <jimmac@ximian.com>
+
+	* document-print-preview: submitted by Corey Woodworth
+
 2005-11-06  Rodney Dawes  <dobey@novell.com>
 
 	* configure.ac: Up version to 0.4.0 for release
