--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2005-11-07  Jakub Steiner <jimmac@ximian.com>
 
-	* document-print-preview: submitted by Corey Woodworth
+	* document-print-preview: 
+	* window-new: submitted by Corey Woodworth
 
 2005-11-06  Rodney Dawes  <dobey@novell.com>
 
