--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-08  Jakub Steiner <jimmac@ximian.com>
+
+	* face-wink: with help from Corey Woodworth
+
 2005-11-07  Jakub Steiner <jimmac@ximian.com>
 
 	* document-print-preview: 
