--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-09  Rodney Dawes  <dobey@novell.com>
+
+	* dialog-error: icon for error dialogs
+
 2005-11-09  Jakub Steiner <jimmac@ximian.com>
 
 	* face-angel: withhelp from Corey Woodworth
