--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-11-10  Jakub Steiner <jimmac@ximian.com>
+
+	* (r) face-happy:
+	* face-smile: according to the naming spec. man renaming in cvs is
+	  a pain!
+
 2005-11-09  Rodney Dawes  <dobey@novell.com>
 
 	* dialog-error: icon for error dialogs
