--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-10  Tuomas Kuosmanen  <tigert@tigert.com>
+
+	* scalable/apps/help-browser: new metaphor that is probably more 
+	universal. First commit to tango with cvs account, yay!
+
 2005-11-10  Jakub Steiner <jimmac@ximian.com>
 
 	* dialog-error: touch-ups
