--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-10  Jakub Steiner <jimmac@ximian.com>
+
+	* edit-clear: an awesome icon from Andreas Nilsson. Just minor
+		touch ups.
+
 2005-11-10  Tuomas Kuosmanen  <tigert@tigert.com>
 
 	* scalable/apps/help-browser: new metaphor that is probably more 
