--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-11-10  Jakub Steiner <jimmac@ximian.com>
 
+	* locked, unlocked: new status icons from Andreas
+
+2005-11-10  Jakub Steiner <jimmac@ximian.com>
+
 	* edit-clear: an awesome icon from Andreas Nilsson. Just minor
 		touch ups.
 
