face devil grin

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-14  Jakub Steiner <jimmac@ximian.com>
+
+	* face-devil-grin: >:-D
+	
 2005-11-11  Jakub Steiner <jimmac@ximian.com>
 
 	* scalable/actions/go-home.svg: get rid of the svg namespace.
