--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-11-14  Jakub Steiner <jimmac@ximian.com>
 
+	* face-glasses: B-)
+
+2005-11-14  Jakub Steiner <jimmac@ximian.com>
+
 	* face-laughing: fix up
 
 2005-11-14  Jakub Steiner <jimmac@ximian.com>
