--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2005-11-14  Jakub Steiner <jimmac@ximian.com>
 
 	* face-glasses: B-)
+	* face-shocked: removed ...
+	* face-surprise: ...and committed as
 
 2005-11-14  Jakub Steiner <jimmac@ximian.com>
 
