--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2005-11-14  Jakub Steiner <jimmac@ximian.com>
 
+	* emblem-important: !
 	* face-glasses: B-)
 	* face-shocked: removed ...
 	* face-surprise: ...and committed as
