--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 	* face-glasses: B-)
 	* face-shocked: removed ...
 	* face-surprise: ...and committed as
+	* face-laughing: removed ...
+	* face-smile-big: ...and committed as
 
 2005-11-14  Jakub Steiner <jimmac@ximian.com>
 
