--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
 	* face-surprise: ...and committed as
 	* face-laughing: removed ...
 	* face-smile-big: ...and committed as
+	* x-office-document: rich text docs
 
 2005-11-14  Jakub Steiner <jimmac@ximian.com>
 
