--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2005-11-14  Jakub Steiner <jimmac@ximian.com>
 
 	* emblem-important: !
+	* emblem-symbolic-link: symlinks
 	* face-glasses: B-)
 	* face-shocked: removed ...
 	* face-surprise: ...and committed as
