directory-new icon

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-17  Tuomas Kuosmanen  <tigert@tigert.com>
+
+	* directory-new: "create new folder"
+
 2005-11-17  Jakub Steiner <jimmac@ximian.com>
 
 	* go-*: new color palette fixes by Andreas Nilsson, few shading
