--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-18  Jakub Steiner <jimmac@ximian.com>
+
+	* x-office-spreadheet.svg: fix up grid alignment (Steven Garrity)
+
 2005-11-17  Tuomas Kuosmanen  <tigert@tigert.com>
 
 	* directory-new: "create new folder"
