helmets are yellow

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-11-18  Jakub Steiner <jimmac@ximian.com>
 
+	* applications-development: touched up contribution from 
+	  Henrik Andersen (hender)
+
+2005-11-18  Jakub Steiner <jimmac@ximian.com>
+
 	* x-office-spreadheet.svg: fix up grid alignment (Steven Garrity)
 
 2005-11-17  Tuomas Kuosmanen  <tigert@tigert.com>
