--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-11-18  Jakub Steiner <jimmac@ximian.com>
 
+	* media-*: media icons from Lapo Calamandrei
+
+2005-11-18  Jakub Steiner <jimmac@ximian.com>
+
 	* applications-development: touched up contribution from 
 	  Henrik Andersen (hender)
 
