new blue folder for document-open

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-21  Jakub Steiner <jimmac@ximian.com>
+
+	* document-open: update to the current folder
+
 2005-11-18  Jakub Steiner <jimmac@ximian.com>
 
 	* media-*: media icons from Lapo Calamandrei
