--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-11-21  Jakub Steiner <jimmac@ximian.com>
 
+	* go-jump: fix the green
+
+2005-11-21  Jakub Steiner <jimmac@ximian.com>
+
 	* document-print: make the arrow less obtrusive. Fixes bug #5110
 
 2005-11-21  Jakub Steiner <jimmac@ximian.com>
