--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 Rodney Dawes <dobey@novell.com>
 Andreas Nilsson <nisses.mail@home.se>
-Tuomas Kuosmanen <tigert@novell.com>
+Tuomas Kuosmanen <tigert@tigert.com>
 Garrett LeSage <garrett@novell.com>
 Jakub Steiner <jimmac@novell.com>
