Just added some stuff in the Changelog I forgot about earlier

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2005-11-21  Andreas Nilsson <nisses.mail@home.se>
+	* go-previous, go next: fixed the new green for sizes 16x16 and 22x22
+
 2005-11-21  Rodney Dawes  <dobey@novell.com>
 
 	* AUTHORS: Update tigert's mail address
