--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-28  Jakub Steiner <jimmac@ximian.com>
+
+	* applications-graphics: graphics category
+
 2005-11-22  Jakub Steiner <jimmac@ximian.com>
 
 	* multimedia-player: generic media player
