view-refresh arrows

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-11-28  Jakub Steiner <jimmac@ximian.com>
 
+	* view-refresh: nicer shape
+
+2005-11-28  Jakub Steiner <jimmac@ximian.com>
+
 	* applications-graphics: graphics category
 
 2005-11-22  Jakub Steiner <jimmac@ximian.com>
