applications -> accessories icon

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-29  Tuomas Kuosmanen  <tigert@tigert.com>
+
+	* applications-accessories: accessories category
+
 2005-11-28  Jakub Steiner <jimmac@ximian.com>
 
 	* view-refresh: nicer shape
