application-games touchups

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-29  Jakub Steiner <jimmac@ximian.com>
+
+	* application-games: libart is more precise than jimmac at 22x22
+
 2005-11-29  Tuomas Kuosmanen  <tigert@tigert.com>
 
 	* applications-accessories: accessories category
