face-kiss by Lapo Calamandrei

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-29  Andreasn Nilsson <nisses.mail@home.se>
+
+	* face-kiss: :-* -emote by Lapo Calamandrei
+	
 2005-11-29  Tuomas Kuosmanen  <tigert@tigert.com>
 
 	* scalable/categories/applications-accessories.svg: oopsie, 
