--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-29  Jakub Steiner <jimmac@ximian.com>
+
+	* accessories-character-map: charmap 
+	
 2005-11-29  Andreas Nilsson  <nisses.mail@home.se>
 	
 	Fixed the names of the face-kiss emote from face-kiss22 and
