face kiss touchups

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-11-29  Jakub Steiner <jimmac@ximian.com>
 
+	* face-kiss: shape fixups
+
+2005-11-29  Jakub Steiner <jimmac@ximian.com>
+
 	* accessories-character-map: charmap 
 	
 2005-11-29  Andreas Nilsson  <nisses.mail@home.se>
