--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-12-03  Jakub Steiner <jimmac@ximian.com>
 
+	* README: update information
+
+2005-12-03  Jakub Steiner <jimmac@ximian.com>
+
 	* emblem-readonly: for unwritable items
 	* emblem-unreadable: for unreadable items
 
