--- a/README
+++ b/README
@@ -1,5 +1,12 @@
-Icon Naming Utils
------------------
+Tango Icon Theme
+----------------
 
-http://tango-project.org/releases/icon-naming-utils-0.2.0.tar.gz
+This is an icon theme that follows the Tango visual guidelines [1]. Currently
+it depends on Imagemagick for creation of 24x24 bitmaps by adding a 1px padding
+around the 22x22px version. For GNOME and KDE you will also need
+icon-naming-utils that allow the theme to work in these environments before
+they follow the new naming scheme [2].
 
+
+[1] http://tango-project.org/Tango_Icon_Theme_Guidelines
+[2] http://tango-project.org/Standard_Icon_Naming_Specification
