--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-12-06  Jakub Steiner <jimmac@ximian.com>
 
+	* {un,}locked.svg: worked with Lapo's change of perspective.
+	
+2005-12-06  Jakub Steiner <jimmac@ximian.com>
+
 	* media-playback-start:
 	* media-playback-stop:
 	* media-playback-pause: try sunken look with darker outline.
