--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-12-07  Rodney Dawes  <dobey@novell.com>
 
+	* */devices/Makefile.am:
+	* */devices/network.*: Renamed to network-wired
+	
+2005-12-07  Rodney Dawes  <dobey@novell.com>
+
 	* configure.ac: Fix the icon-naming-utils check to use pkgconfig and
 	require icon-naming-utils >= 0.6.0
 	Add */places/Makefile to the config files to output
