--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2005-12-07  Rodney Dawes  <dobey@novell.com>
 
+	* */apps/Makefile.am:
+	* */apps/preferences-desktop-assistive-technology:
+	* */apps/preferences-desktop-keyboard-shortcuts:
+	* */apps/preferences-desktop-remote-desktop:
+	* */apps/preferences-desktop-sound:
+	* */apps/preferences-system-network-proxy:
+	Add these new icons from Jakub Steiner
+
+2005-12-07  Rodney Dawes  <dobey@novell.com>
+
 	* */devices/Makefile.am:
 	* */devices/network.*: Renamed to network-wired
 	
