--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-12-12  Rodney Dawes  <dobey@novell.com>
+
+	* 22x22/status/Makefile.am: Add missing status icons for places
+
 2005-12-08  Rodney Dawes  <dobey@novell.com>
 
 	* configure.ac: Up version to 0.6.1 for release
