--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-12-15  Rodney Dawes  <dobey@novell.com>
+
+	* */status/Makefile.am:
+	* */status/network-wireless-encrypted.*:
+	Add in Jakub's nicely done wireless encrypted icon
+
 2005-12-14  Jakub Steiner <jimmac@ximian.com>
 
 	* media-eject: the missing button
