--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-12-16  Rodney Dawes  <dobey@novell.com>
+
+	* scalable/status/media-playback-start.svg: Match border color with
+	the media-playback-stop icon, and remove the opaque background setting
+	Patch from Niko Mirthes
+
 2005-12-15  Rodney Dawes  <dobey@novell.com>
 
 	* */status/Makefile.am:
